<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMART note</string>

    <!-- Title of pages -->
    <string name="title_activity_create">Create Activity</string>
    <string name="title_activity_search_name">Search Name Activity</string>
    <string name="title_activity_note_detail">Note Detail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_archive">Archive</string>
    
    <!-- Menu items -->
    <string name="new_title">Add New</string>
    <string name="search_title">Search here!</string>
    <string name="refresh_title">Refresh</string>
    <string name="search_hint">Search hint!</string>
 	<string name="search_type">Filter By Category</string>
 	<string name="search_date">Filter By Date</string>
 	<string name="sort_title">Sort By Title</string>
 	<string name="sort_type">Sort By Type</string>
 	<string name="sort_date">Sort By Date</string>
 	<string name="sort_location">Sort By Address</string>
    <string name="action_settings">Settings</string>
    <string name="action_archive">Archive</string>
    <string name="action_delete_all">Delete All</string>
    <string name="upload_to_dropbox">Upload to Dropbox</string>
    <string name="download_from_dropbox">Download from Dropbox</string>
    <string name="send_email">Send email</string>
	<string name="import_file">import file</string>
	<string name="sendBlueTooth">BlueTooth sharing</string>
    <!-- Delete|Archive note -->
    <string name="btn_archive">Archive</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_remove">Remove</string>
    <string name="cb_remember_setting">Remember this setting?</string>
    <string name="btn_reactivate">Reactivate</string>
    
    <!-- Category of notes -->
    <string name="selection"><u>Tap here to select note category</u></string>
        <string name="tags"><u>Tap here to add tags</u></string>
    <string name="search_label">search here</string>

    <string name="attachment"><b><u>Attachment(s):</u></b></string>
    
    <string-array name="category_choice">
        <item>Personal</item>
        <item>Meeting Notes</item>
        <item>Client</item>
    </string-array>
    
    
    <string-array name="attachment_choice">
        <item>Remove Image</item>
        <item>Remove Video</item>
        <item>Remove Location</item>
        <item>All Inputs</item>
    </string-array>
    
    
	<string-array name="sort_choice">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    
    <string name="btn_edit">Edit</string>
    <string name="title_activity_update">Update Note</string>
    
</resources>
