<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!--  go to create page -->
    <item
        android:id="@+id/new_icon"
        android:icon="@drawable/ic_action_new"
        android:title="@string/new_title"
        android:showAsAction="always"
        />
    <!-- Search  -->
	<item 
	    android:id="@+id/search_icon"
	    android:icon="@drawable/ic_action_search"
	    android:title="@string/search_title"
	    android:showAsAction="always"
      	android:actionViewClass="android.widget.SearchView"
	    />
	<item 
	    android:id="@+id/refresh_icon"
	    android:icon="@drawable/ic_action_refresh"
	    android:title="@string/refresh_title"
	    android:showAsAction="never"
	    />
	<item 
	    android:id="@+id/send_file"
	    android:icon="@drawable/ic_action_refresh"
	    android:title="@string/send_file"
	    android:showAsAction="never"
	    />
	<item
        android:id="@+id/upload_dropbox"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/upload_to_dropbox"/>
	<item
        android:id="@+id/action_archive"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_archive"/>
	<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	<item
        android:id="@+id/sort_title"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sort_title"/>
	<item
        android:id="@+id/sort_type"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sort_type"/>
	<item
        android:id="@+id/sort_date"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sort_date"/>
	<item
        android:id="@+id/sort_location"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sort_location"/>
	<item
        android:id="@+id/search_type"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/search_type"/>
	<item
        android:id="@+id/search_date"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/search_date"/>
	
	
</menu>
