<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search  -->
	<item 
	    android:id="@+id/search_icon"
	    android:icon="@drawable/ic_action_search"
	    android:title="@string/search_title"
	    android:showAsAction="always"
      	android:actionViewClass="android.widget.SearchView"
	    />
	<item 
	    android:id="@+id/refresh_icon"
	    android:icon="@drawable/ic_action_refresh"
	    android:title="@string/refresh_title"
	    android:showAsAction="never"
	    />
	<item
	    android:id="@+id/action_delete_all"
	    android:orderInCategory="100"
	    android:showAsAction="never"
	    android:title="@string/action_delete_all"/>
	<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	<item
        android:id="@+id/sort_title"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sort_title"/>
	<item
        android:id="@+id/sort_type"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sort_type"/>
	<item
        android:id="@+id/sort_date"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sort_date"/>
	<item
        android:id="@+id/sort_location"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sort_location"/>
	<item
        android:id="@+id/search_type"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/search_type"/>
	<item
        android:id="@+id/search_date"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/search_date"/>
</menu>
