<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.it3176_smartnote.NoteDetail" >
	<item
        android:id="@+id/btn_edit"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/btn_edit"/>
	
    <item
        android:id="@+id/btn_remove"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/btn_remove"/>
  
    <item
        android:id="@+id/send_email"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/send_email"/>
    
	<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
</menu>
