
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".UpdateActivity"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingTop="5dp"
	     >
	
	   <!--   <EditText
	        android:id="@+id/noteTitle"
	        android:layout_marginLeft="5dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/create_note_styling"
	        android:textSize="32sp"
	        android:hint="Title"
	        android:inputType="text" />-->
	        
	        
	    <AutoCompleteTextView 
	        android:id="@+id/noteTitle"
	        android:layout_marginLeft="5dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/linear1"
	        android:background="@drawable/create_note_styling"
	        android:textSize="32sp"
	        android:hint="Title"
       		 />
	
	    <TextView
	        android:id="@+id/currentDateTimeOfCreation"
	        android:layout_marginLeft="5dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/noteTitle"
	         />
	
	    <View 
	        android:id="@+id/hr"
	        android:layout_marginTop="5dp"
	   	    android:layout_width="fill_parent"
	        android:layout_height="2dp" 
	        android:layout_below="@+id/currentDateTimeOfCreation"      
	        android:background="#000"/>
	    
	   <!--   <TextView
	        android:id="@+id/selection"
	        android:layout_marginLeft="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Category(ies): "
	        android:layout_below="@+id/hr"
	         />-->
	    
	    <TextView
	        android:id="@+id/categorySelection"
	        android:layout_marginLeft="5dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/hr"
	        
	        android:textColor="#0000ff"
	        android:text="@string/selection"
	        />
	    
	    
	    
	    <TextView
	        android:id="@+id/categorySelectionChoice"
	        android:layout_marginLeft="5dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/categorySelection"
	        android:text="Category: None Selected"
	        android:textColor="#C35817"
	         />
<View 
	        android:id="@+id/hr2"
	        android:layout_marginTop="5dp"
	   	    android:layout_width="fill_parent"
	        android:layout_height="2dp" 
	        android:layout_below="@+id/categorySelectionChoice"      
	        android:background="#000"/>
	    
	     
	     
	     
	      <TextView
	        android:id="@+id/tapToAddTags"
	        android:layout_marginLeft="5dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/hr2"
	        
	        android:textColor="#0000ff"
	        android:text="@string/tags"
	        />
	     
	     
	      <TextView
	        android:id="@+id/tags"
	        android:layout_marginLeft="5dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/tapToAddTags"
	        android:text="Tags: -"
	        android:textColor="#C35817"
	         />
	      
	     
	     <View 
	        android:id="@+id/hr3"
	        android:layout_marginTop="5dp"
	   	    android:layout_width="fill_parent"
	        android:layout_height="2dp" 
	        android:layout_below="@+id/tags"      
	        android:background="#000"/>
	    
	     <EditText
	         android:id="@+id/noteContent"
	         android:layout_width="fill_parent"
	         android:layout_height="250dp"
	         android:layout_below="@+id/hr3"
	         android:layout_marginLeft="5dp"
	         android:layout_marginTop="5dp"
	         android:background="@drawable/create_note_styling"
	         android:gravity="top"
	         android:hint="Content"
	         android:inputType="textMultiLine" />
	     
	     
	     
	     
	     <TextView 
		                 android:id="@+id/attachmentHr"
		                 android:layout_width="fill_parent"
		        		 android:layout_height="2dp"     
		        		 android:layout_below="@+id/noteContent"
		   			     android:background="#000"/>
		                 
		             
		         
	     
	     
	     
	     
	     
	     <ScrollView
	         	android:id="@+id/sv"
	         	android:layout_below="@+id/attachmentHr"
	         	android:layout_width="fill_parent"
	         	android:layout_height="fill_parent">
	     
	         <FrameLayout android:layout_width="match_parent"
    			android:layout_height="wrap_content">
	         
	         
	         
		         <LinearLayout
		             android:id="@+id/lLA"
		             android:layout_width="fill_parent"
		             android:layout_height="wrap_content"
		             android:orientation="vertical"
		             >  
		                  
		            <!--   <TextView 
		                 android:id="@+id/hrTv"
		                 android:layout_width="fill_parent"
		        		 android:layout_height="2dp"     
		   			     android:background="#000"/>
		                 -->
		             
		          	 <TextView
			             android:id="@+id/attachment"  
			             android:layout_height="wrap_content"
			             android:layout_width="fill_parent"
			             android:layout_marginTop="5dp"
			             android:text="@string/attachment"
		               />
		           
		           	 <TextView
			             android:id="@+id/imageUriTv"
			             android:layout_height="wrap_content"
			             android:layout_width="fill_parent" 
			             android:layout_marginTop="5dp"/>
	   
				     <ImageView 
				         android:id="@+id/imageView"
				         android:layout_width="fill_parent"
				         android:layout_height="200dp"
				         android:layout_marginTop="5dp"
				         android:layout_marginLeft="10dp"
				         android:layout_marginRight="10dp"
						/> 

				     <TextView
		                 android:id="@+id/videoUriTv"
		                 android:layout_height="wrap_content"
		                 android:layout_width="fill_parent"
		                 android:layout_marginTop="5dp"/>
				     
				     <VideoView 
				         android:id="@+id/videoView"
				         android:layout_width="fill_parent"
				         android:layout_height="200dp" 
				         android:layout_marginTop="5dp"
				         android:layout_marginLeft="10dp"
				         android:layout_marginRight="10dp"
						 android:layout_gravity="center"/>
				 	     
				     <TextView
				         android:id="@+id/audioUriTv"
		                 android:layout_height="wrap_content"
		                 android:layout_width="fill_parent"
		                 android:layout_marginTop="5dp"/>		         
				         
				     <VideoView 
				         android:id="@+id/audioView"
				         android:layout_marginTop="5dp"
				         android:layout_width="100dp"
				         android:layout_height="100dp"
				         android:layout_gravity="center"
				         android:background="@drawable/audio"
       					 />

				    
				     
				     
				     
		              <TextView
				         android:id="@+id/addTv"
		                 android:layout_height="wrap_content"
		                 android:layout_width="wrap_content"
		                 android:layout_marginTop="5dp"
		                 android:text="Location: "/>
				     
				      <TextView
				         android:id="@+id/currentLocation"
		                 android:layout_height="wrap_content"
		                 android:layout_width="fill_parent"
		                 android:layout_marginTop="5dp"
		                 android:text="blah"
		                 />
		             
				     
				     
				     
				     
				     <TextView
						 android:layout_width="fill_parent"
				         android:layout_height="wrap_content"
				         />
		    	 </LinearLayout>
	         </FrameLayout>
	     </ScrollView>    
</RelativeLayout>

